--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,3 +1,10 @@
 .logo {
   width: 173px;
 }
+
+@media screen and (max-width: 540px) {
+  .logo {
+    width: 126px;
+    margin-left: 27px;
+  }
+}
