--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -12,3 +12,11 @@
 .popup__button:hover {
   opacity: 80%;
 }
+
+
+
+@media screen and (max-width: 540px) {
+  .popup__button {
+    font-size: 14px;
+  }
+}
