--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -12,6 +12,14 @@
 
 @media screen and (max-width: 540px) {
   .popup__content {
-    width: calc(100% - 60px);
+    width: calc(100% - 90px);
+    top: 123px;
+    padding: 22px 25px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .popup__content {
+    width: 282px;
   }
 }
