--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -2,3 +2,9 @@
   
   margin-top: 36px;
 }
+
+@media screen and (max-width: 540px) {
+  .popup__form {
+    margin-top: 55px;
+  }
+}
