--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,5 +8,6 @@
   .popup__title {
     font-size: 18px;
     line-height: 18px;
+    margin-top: 10px;
   }
 }
